Add links to pages

--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <title>About</title>
 </head>
 <body>
+    <nav>
+        <a href="home.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="about.html">About</a>
+    </nav>
     <h1>About the author</h1>
     <p>Blah blah blah</p>
 </body>
