--- a/products.html
+++ b/products.html
@@ -5,6 +5,11 @@
     <title>Products</title>
 </head>
 <body>
+    <nav>
+        <a href="home.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="about.html">About</a>
+    </nav>
     <h1>Products</h1>
     <ul>
         <li>Croissant</li>
