--- a/home.html
+++ b/home.html
@@ -5,6 +5,11 @@
     <title>Home</title>
 </head>
 <body>
+    <nav>
+        <a href="home.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="about.html">About</a>
+    </nav>
     <h1>Home Page of Blah Blah Blah</h1>
 </body>
 </html>
