--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
     </nav>
-    <h1>About the author</h1>
+    <h1 style="color: blue;">About the author</h1>
     <p>Blah blah blah</p>
 </body>
 </html>
