--- a/home.html
+++ b/home.html
@@ -10,6 +10,6 @@
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
     </nav>
-    <h1 style="color: blue;">Home Page of Blah Blah Blah</h1>
+    <h1 style="color: red;">Home Page of Blah Blah Blah</h1>
 </body>
 </html>
