Remove inline styles

--- a/home.html
+++ b/home.html
@@ -11,6 +11,6 @@
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
     </nav>
-    <h1 style="color: red;">Home Page of Blah Blah Blah</h1>
+    <h1>Home Page of Blah Blah Blah</h1>
 </body>
 </html>
