--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
         <a href="products.html">Products</a>
         <a href="about.html">About</a>
     </nav>
-    <h1 style="color: blue;">Products</h1>
+    <h1>Products</h1>
     <ul>
         <li>Croissant</li>
         <li>Coffee</li>
